Added top 5 move page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import HeaderButton from './HeaderButton.astro';
-console.log('Header');
 ---
 
 <header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
@@ -9,6 +8,8 @@ console.log('Header');
       Christopher Nolan <span class="text-gradient">Filmography</span>
     </h1>
   </div>
+
+  <HeaderButton />
 </header>
 
 <style>
