--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,4 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Christopher Nolan Filmography">
-  <nav class="flex flex-col items-center justify-between w-full text-center">
-  </nav>
-</Layout>
+<Layout title="Christopher Nolan Filmography" />
