--- a/src/pages/movie/[id].astro
+++ b/src/pages/movie/[id].astro
@@ -7,8 +7,7 @@ import { type MoviesProps } from '../../types/api';
 
 const { id } = Astro.params;
 let movie;
-if (id) movie = await getMovieById({ id });
-console.log(movie);
+if (id) movie = (await getMovieById({ id })) as MoviesProps;
 
 export async function getStaticPaths() {
   const movies = await getMovies();
@@ -18,7 +17,93 @@ export async function getStaticPaths() {
 ---
 
 <Layout title={movie?.title}>
-  <article>
-    <img src={movie?.poster} alt="poster imagen" />
-  </article>
+  <div class="grid place-items-center font-mono">
+    <div class="rounded-md bg-gray-800 shadow-lg">
+      <div class="md:flex px-4 leading-none max-w-4xl">
+        <div class="flex-none">
+          <img
+            src=`${movie?.poster}`
+            alt="pic"
+            class="h-72 w-56 rounded-md shadow-2xl transform -translate-y-4 border-4 border-gray-300 shadow-lg"
+          />
+        </div>
+
+        <div class="flex-col text-gray-300">
+          <p class="pt-4 text-2xl font-bold">
+            {movie?.title} ({movie?.year})
+          </p>
+          <hr class="hr-text" data-content="" />
+          <div class="text-md flex justify-between px-4 my-2">
+            <span class="font-bold"
+              >{movie?.duration} min | {
+                movie?.genre.map((gen) => gen).join(' - ')
+              }</span
+            >
+          </div>
+          <p class="hidden md:block px-4 my-4 text-sm text-left">
+            In Gotham City, mentally troubled comedian Arthur Fleck is
+            disregarded and mistreated by society. He then embarks on a downward
+            spiral of revolution and bloody crime. This path brings him
+            face-to-face with his alter-ego: the Joker.
+          </p>
+
+          <p class="flex text-md px-4 my-2">Rating: {movie?.rate}/10</p>
+
+          <div class="text-xs">
+            <a href=`${movie?.trailer}`>
+              <button
+                type="button"
+                class="border border-gray-400 text-gray-400 rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-gray-900 focus:outline-none focus:shadow-outline"
+                >TRAILER</button
+              >
+            </a>
+
+            <a href=`${movie?.imdb}`>
+              <button
+                type="button"
+                class="border border-gray-400 text-gray-400 rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-gray-900 focus:outline-none focus:shadow-outline"
+                >IMDB</button
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </Layout>
+
+<style>
+  body {
+    text-align: center;
+  }
+
+  .hr-text {
+    line-height: 1em;
+    position: relative;
+    outline: 0;
+    border: 0;
+    color: black;
+    text-align: center;
+    height: 1.5em;
+    opacity: 0.5;
+  }
+  .hr-text:before {
+    content: '';
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+  }
+  .hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    padding: 0 0.5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+  }
+</style>
