Added description on movie view inf

--- a/src/pages/movie/[id].astro
+++ b/src/pages/movie/[id].astro
@@ -41,10 +41,7 @@ export async function getStaticPaths() {
             >
           </div>
           <p class="hidden md:block px-4 my-4 text-sm text-left">
-            In Gotham City, mentally troubled comedian Arthur Fleck is
-            disregarded and mistreated by society. He then embarks on a downward
-            spiral of revolution and bloody crime. This path brings him
-            face-to-face with his alter-ego: the Joker.
+            {movie?.description}
           </p>
 
           <p class="flex text-md px-4 my-2">Rating: {movie?.rate}/10</p>
