--- a/src/components/MovieCard.astro
+++ b/src/components/MovieCard.astro
@@ -2,6 +2,7 @@
 export interface Props {
   _id: string;
   title: string;
+  description: string;
   director: string;
   year: number;
   duration: number;
